se agregó carpeta imagenes. una descripción y se corrigió ortografía

--- a/index.html
+++ b/index.html
@@ -154,10 +154,17 @@
         <div class="info" id="1">
             <h2>Ana Beltran</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <li><a href="https://www.google.com/" target="_blanck">Haz click para sabes mas </a></li>
+            <li><a href="https://www.google.com/" target="_blanck">Haz click para saber mas </a></li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/800px-User_icon_2.svg.png">
             </ul>
-            </div>
+        </div>
+        <div class="info" id="2">
+            <h2>Ana Beltran</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <li><a href="https://www.google.com/" target="_blanck">Haz click para saber mas </a></li>
+            <img src="img/admin.png">
+            </ul>
+        </div>
         <!--Aqui va ir la demas info-->
     </div>
     <footer>
